[tool.poetry]
name = "quotobot"
version = "0.1.0"
description = ""
authors = ["Julia van der Kris <julia@juuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuulia.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^1.7.3"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.1"}

[tool.poetry.dev-dependencies]
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
